# graphvisualizer

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  array.edges  build.sh  config_script.sh  copy_res_release.bat  go_todo  graphvisualizer.cbp  graphvisualizer.sln  graphvisualizer.vcxproj  imgui.ini  settings.json  todo.md
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
graphvisualizer.dir/Debug/graphvisualizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
graphvisualizer.dir/Release/graphvisualizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  graphvisualizer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/shaders/: circle.frag  circle.vert  fruchtermanreingold.comp  fruchtermanreingold1_1.comp  fruchtermanreingold_attractive.comp  fruchtermanreingold_lines.comp  fruchtermanreingold_positionupdate.comp  fruchtermanreingold_repulsive.comp  line.frag  line.vert
res/shaders/fruchterman-reingold/: fruchtermanreingold_attractive.comp  fruchtermanreingold_lines.comp  fruchtermanreingold_positionupdate.comp  fruchtermanreingold_repulsive.comp
res/shaders/fruchterman-reingold/improved/: fruchtermanreingold_distance_calc.comp  fruchtermanreingold_distance_update.comp
res/shaders/random/: random_lines.comp  random_positionupdate.comp
src/: main.cpp  resource.h  test.cpp
src/config/: AppConfig.h  BoundryConfig.h
src/graphic/: ComputeShader.cpp  ComputeShader.h  GraphicsStructure.h  Renderer.cpp  Renderer.h  SettingsOpengl.cpp  SettingsOpengl.h  SettingsSDL.cpp  SettingsSDL.h  Shader.cpp  Shader.h
src/graphic/camera/: Camera.cpp  Camera.h
src/helper/: FileHelper.h  Logger.h  ModelCreator.h  RandomNumberGenerator.h  nanoflann.h
src/imgui/: imgui_impl_sdl_gl3.cpp
src/models/: FRModel.cpp  FRModel.h  GraphModel.cpp  GraphModel.h  IModel.h  InstancedModel.cpp  InstancedModel.h
src/models/FR/: FRModel.cpp  FRModel.h  FRModelCpu.cpp  FRModelCpu.h  FRModelCpuKdTree.cpp  FRModelCpuKdTree.h  FRModelImproved.cpp  FRModelImproved.h
src/models/ForceAtlas/: ForceAtlasModel.cpp  ForceAtlasModel.h
src/models/drawable/: IDrawableObject.h  Model.cpp  Model.h
src/models/random/: RandomModel.cpp  RandomModel.h
src/system/: App.cpp  App.h
src/system/input/: InputManager.cpp  InputManager.h
